--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/prettier": "^2.4.3",
     "@types/rimraf": "^3.0.2",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
