--- a/example.env
+++ b/example.env
@@ -5,3 +5,8 @@ RABBITMQ_AUTH_QUEUE=auth_queue
 FILES_HOST=files
 FILES_PORT=9004
 FILES_MONGO_URI=mongodb://admin:master123@mongodb:27017/filesdb
+AWS_EXPIRE_LINK=60
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_REGION=
+AWS_BUCKET=
