--- a/example.env
+++ b/example.env
@@ -2,11 +2,10 @@ NODE_ENV=development
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
 RABBITMQ_FILES_QUEUE=files_queue
 RABBITMQ_AUTH_QUEUE=auth_queue
-FILES_HOST=files
-FILES_PORT=9004
-FILES_MONGO_URI=mongodb://admin:master123@mongodb:27017/filesdb
+FILES_MONGO_URI=mongodb://admin:master123@mongodb:27017/nestjs-files
 AWS_EXPIRE_LINK=60
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
 AWS_REGION=
 AWS_BUCKET=
+PORT=9003
