--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "files",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "postinstall": "npx typesync",
+    "postinstall": "npm run gen",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start --watch",
+    "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
-    "prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "gen": "prisma generate",
+    "start": "node dist/main",
+    "db:save": "prisma migrate dev --create-only --preview-feature",
+    "db:migrate": "prisma migrate dev --preview-feature",
+    "db:migrate:prod": "prisma migrate deploy --preview-feature",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
@@ -26,15 +27,18 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.0.6",
-    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
+    "@nestjs/terminus": "^9.1.4",
+    "@prisma/client": "^4.9.0",
     "amqp-connection-manager": "^3.6.0",
     "amqplib": "^0.8.0",
-    "aws-sdk": "^2.1066.0",
-    "class-validator": "^0.13.2",
+    "aws-sdk": "^2.1304.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.1.8",
+    "express": "^4.18.2",
+    "nestjs-i18n": "^9.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -47,8 +51,10 @@
     "@types/amqplib": "^0.8.2",
     "@types/eslint": "^8.4.1",
     "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/express": "^4.17.16",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
+    "@types/pg": "^8.6.4",
     "@types/prettier": "^2.4.3",
     "@types/rimraf": "^3.0.2",
     "@types/supertest": "^2.0.11",
@@ -62,6 +68,7 @@
     "jest": "^27.0.6",
     "lint-staged": "^12.3.4",
     "prettier": "^2.3.2",
+    "prisma": "^4.9.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
@@ -75,7 +82,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": "./",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -84,13 +91,20 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "reporters": [
+      "default",
+      [
+        "jest-junit",
+        {
+          "outputDirectory": ".",
+          "outputName": "junit.xml"
+        }
+      ]
+    ]
   },
   "lint-staged": {
-    "src/**/*.{ts,js}": [
-      "npm run lint",
-      "npm run format",
-      "git add"
-    ]
+    "*.{js,ts}": "npm run lint:fix",
+    "*.{ts,js,json,md}": "prettier --write"
   }
 }
