--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "build": "nest build",
     "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
-    "gen": "prisma generate",
     "start": "node dist/main",
-    "db:save": "prisma migrate dev --create-only --preview-feature",
-    "db:migrate": "prisma migrate dev --preview-feature",
-    "db:migrate:prod": "prisma migrate deploy --preview-feature",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "test": "jest",
@@ -27,10 +23,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.0.6",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^9.1.4",
-    "@prisma/client": "^4.9.0",
     "amqp-connection-manager": "^3.6.0",
     "amqplib": "^0.8.0",
     "aws-sdk": "^2.1304.0",
@@ -38,6 +34,7 @@
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
     "nestjs-i18n": "^9.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -68,7 +65,6 @@
     "jest": "^27.0.6",
     "lint-staged": "^12.3.4",
     "prettier": "^2.3.2",
-    "prisma": "^4.9.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
