new packages added

--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "mongoose": "^6.9.0",
     "nestjs-i18n": "^9.2.1",
+    "nestjs-pino": "^3.1.2",
+    "pino-http": "^8.3.2",
+    "pino-pretty": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
