--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,11 @@
 NODE_ENV=development
-RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+PORT=9003
+RABBITMQ_URL=amqp://admin:master123@rabbitmq:5672
 RABBITMQ_FILES_QUEUE=files_queue
 RABBITMQ_AUTH_QUEUE=auth_queue
-FILES_MONGO_URI=mongodb://mongodb:27017/nestjs-files
+DATABASE_URL=mongodb://mongodb:27017/files-db
 AWS_EXPIRE_LINK=
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
 AWS_REGION=
 AWS_BUCKET=
-PORT=9003
