--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "dev": "nest start --watch",
+    "dev": "dotenv -e .env.local -- nest start --watch",
     "debug": "nest start --debug --watch",
     "start": "node dist/main",
     "lint": "eslint .",
@@ -36,9 +36,6 @@
     "helmet": "^6.0.1",
     "mongoose": "^6.9.0",
     "nestjs-i18n": "^9.2.1",
-    "nestjs-pino": "^3.1.2",
-    "pino-http": "^8.3.2",
-    "pino-pretty": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -61,6 +58,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "dotenv-cli": "^7.0.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
