--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,14 @@
-NODE_ENV=development
-PORT=9003
-RABBITMQ_URL=amqp://admin:master123@rabbitmq:5672
-RABBITMQ_FILES_QUEUE=files_queue
-RABBITMQ_AUTH_QUEUE=auth_queue
-DATABASE_URL=mongodb://mongodb:27017/files-db
-AWS_EXPIRE_LINK=
-AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
-AWS_REGION=
-AWS_BUCKET=
+APP_NAME="@backendworks/files"
+APP_ENV="development"
+
+HTTP_ENABLE=true
+HTTP_HOST="0.0.0.0"
+HTTP_PORT=9004
+HTTP_VERSIONING_ENABLE=true
+HTTP_VERSION=1
+
+RABBITMQ_URL="amqp://admin:master123@localhost:5672"
+RABBITMQ_AUTH_QUEUE="auth_queue"
+RABBITMQ_FILES_QUEUE="files_queue"
+
+DATABASE_URL="mongodb://localhost:27017/files-db"
