--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "files",
+  "name": "@backendworks/files",
   "version": "0.0.1",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
+    "postinstall": "npx typesync",
     "build": "nest build",
     "dev": "dotenv -e .env.local -- nest start --watch",
     "debug": "nest start --debug --watch",
@@ -14,12 +15,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "test:e2e": "jest --config ./test/jest-e2e.json --forceExit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.0.6",
     "@nestjs/mongoose": "^9.2.1",
@@ -35,7 +36,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "mongoose": "^6.9.0",
-    "nestjs-i18n": "^9.2.1",
+    "nestjs-i18n": "^9.2.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -47,9 +48,11 @@
     "@nestjs/testing": "^8.0.0",
     "@types/amqplib": "^0.8.2",
     "@types/eslint": "^8.4.1",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/express": "^4.17.16",
     "@types/jest": "^27.0.1",
+    "@types/lint-staged": "^13.3.0",
     "@types/node": "^16.0.0",
     "@types/pg": "^8.6.4",
     "@types/prettier": "^2.4.3",
@@ -72,6 +75,22 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "useTabs": false,
+    "tabWidth": 2,
+    "overrides": [
+      {
+        "files": "*.yml",
+        "options": {
+          "tadWidth": 2,
+          "printWidth": 40,
+          "singleQuote": true
+        }
+      }
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
