--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@backendworks/files",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "postinstall": "npx typesync",
+    "postinstall": "npm run generate && npx typesync",
     "build": "nest build",
     "dev": "dotenv -e .env.local -- nest start --watch",
     "debug": "nest start --debug --watch",
     "start": "node dist/main",
+    "db:push": "dotenv -e .env.local -- prisma db push",
+    "generate": "dotenv -e .env.local -- prisma generate",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "test": "jest",
@@ -19,17 +21,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.535.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.0.6",
-    "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^9.1.4",
+    "@prisma/client": "^5.11.0",
     "amqp-connection-manager": "^3.6.0",
     "amqplib": "^0.8.0",
     "aws-sdk": "^2.1304.0",
+    "bson": "^6.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
@@ -43,6 +48,7 @@
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.535.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -69,12 +75,13 @@
     "jest": "^27.0.6",
     "lint-staged": "^12.3.4",
     "prettier": "^2.3.2",
+    "prisma": "^5.11.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "<4.8"
   },
   "prettier": {
     "singleQuote": true,
