--- a/package.json
+++ b/package.json
@@ -21,67 +21,68 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.535.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/microservices": "^8.0.6",
-    "@nestjs/mongoose": "^10.0.4",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.2.0",
-    "@nestjs/terminus": "^9.1.4",
-    "@prisma/client": "^5.11.0",
-    "amqp-connection-manager": "^3.6.0",
-    "amqplib": "^0.8.0",
-    "aws-sdk": "^2.1304.0",
-    "bson": "^6.5.0",
+    "@aws-sdk/client-s3": "^3.577.0",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.3.8",
+    "@nestjs/microservices": "^10.3.8",
+    "@nestjs/mongoose": "^10.0.6",
+    "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/terminus": "^10.2.3",
+    "@prisma/client": "^5.14.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
+    "aws-sdk": "^2.1625.0",
+    "bson": "^6.7.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "mongoose": "^6.9.0",
-    "nestjs-i18n": "^10.2.6",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.4.0",
+    "nestjs-i18n": "^10.4.5",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^5.0.7",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@aws-sdk/s3-request-presigner": "^3.535.0",
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/amqplib": "^0.8.2",
-    "@types/eslint": "^8.4.1",
+    "@aws-sdk/s3-request-presigner": "^3.577.0",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.8",
+    "@types/amqplib": "^0.10.5",
+    "@types/eslint": "^8.56.10",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/express": "^4.17.16",
-    "@types/jest": "^27.0.1",
+    "@types/eslint-plugin-prettier": "^3.1.3",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/lint-staged": "^13.3.0",
-    "@types/node": "^16.0.0",
-    "@types/pg": "^8.6.4",
-    "@types/prettier": "^2.4.3",
+    "@types/node": "^20.12.12",
+    "@types/pg": "^8.11.6",
+    "@types/prettier": "^2.7.3",
     "@types/rimraf": "^3.0.2",
-    "@types/supertest": "^2.0.11",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "dotenv-cli": "^7.0.0",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^7.0.0",
-    "jest": "^27.0.6",
-    "lint-staged": "^12.3.4",
-    "prettier": "^2.3.2",
-    "prisma": "^5.11.0",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "<4.8"
+    "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "dotenv-cli": "^7.4.2",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "lint-staged": "^15.2.4",
+    "prettier": "^3.2.5",
+    "prisma": "^5.14.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.3",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4"
   },
   "prettier": {
     "singleQuote": true,
