--- a/.env.docker
+++ b/.env.docker
@@ -11,4 +11,4 @@ RABBITMQ_URL="amqp://admin:master123@rabbitmq:5672"
 RABBITMQ_FILES_QUEUE="files_queue"
 RABBITMQ_AUTH_QUEUE="auth_queue"
 
-DATABASE_URL="mongodb+srv://admin:QpVEDyBx9Kz0s51s@nestjs-microservice.bebcfti.mongodb.net/files"
+DATABASE_URL="mongodb://mongodb:27017/files"
