--- a/.env.docker
+++ b/.env.docker
@@ -12,3 +12,8 @@ RABBITMQ_FILES_QUEUE="files_queue"
 RABBITMQ_AUTH_QUEUE="auth_queue"
 
 DATABASE_URL="mongodb://mongodb:27017/files"
+
+AWS_S3_REGION="ap-south-1"
+AWS_S3_ACCESS_KEY=""
+AWS_S3_SECRET_KEY=""
+AWS_S3_BUCKET=""
